force-app/main/default/objects/Broker_Code__c/Broker_Code__c.object-meta.xml
<CustomObject>
    <description>Holds the Broker accreditation details</description>
    <label>Broker Code</label>
    <nameField>
        <displayFormat>Code-{0000000000}</displayFormat>
        <label>Broker Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>