force-app/main/default/objects/Broker_Code__c/fields/Accreditation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_End_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Accreditation End Date</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>