force-app/main/default/objects/Broker_Code__c/fields/Accreditation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Accreditation Start Date</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>