force-app/main/default/objects/Broker_Code__c/fields/Accreditation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Accreditation of the Broker associated to this Broker Code.</description>
    <label>Broker Accreditation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>