force-app/main/default/objects/Broker_Code__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Broker Contact.</description>
    <label>Broker Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Codes</relationshipLabel>
    <relationshipName>Broker_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>