force-app/main/default/objects/Broker_Code__c/fields/Industry_Body_Member__c.field-meta.xml
<CustomField>
    <fullName>Industry_Body_Member__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Industry Body Member</description>
    <label>Industry Body Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MFAA</fullName>
            </value>
            <value>
                <fullName>FBAA</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>ICAA</fullName>
            </value>
            <value>
                <fullName>NIA</fullName>
            </value>
            <value>
                <fullName>FPAA</fullName>
            </value>
            <value>
                <fullName>FINSIA</fullName>
            </value>
            <value>
                <fullName>CAFBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>