force-app/main/default/objects/Broker_Code__c/fields/TPMI_SAO_Code__c.field-meta.xml
<CustomField>
    <fullName>TPMI_SAO_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Broker TPMI-SAO Code from source System</description>
    <label>TPMI-SAO Code</label>
    <length>19</length>
    <type>Text</type>
</CustomField>